# Blinc

./: .gitignore  Cargo.toml  LICENSE  PROJECT_PLAN.md  README.md  backlog.md
crates/blinc_3d/: Cargo.toml
crates/blinc_3d/examples/: camera_demo.rs  ecs_demo.rs  geometry_demo.rs  materials_demo.rs  nodegraph_demo.rs  particles_demo.rs  physics_demo.rs  sdf_demo.rs  terrain_demo.rs
crates/blinc_3d/src/: lib.rs  prelude.rs
crates/blinc_3d/src/ecs/: component.rs  entity.rs  mod.rs  query.rs  schedule.rs  system.rs  world.rs
crates/blinc_3d/src/geometry/: mod.rs  primitives.rs  vertex.rs
crates/blinc_3d/src/integration/: animation.rs  canvas.rs  color.rs  fsm.rs  mod.rs
crates/blinc_3d/src/lights/: ambient.rs  directional.rs  hemisphere.rs  mod.rs  point.rs  spot.rs
crates/blinc_3d/src/materials/: basic.rs  mod.rs  phong.rs  standard.rs
crates/blinc_3d/src/math/: bounds.rs  extensions.rs  mod.rs  quat.rs
crates/blinc_3d/src/nodegraph/: connection.rs  mod.rs  node.rs  port.rs  serial.rs  trigger.rs  value.rs
crates/blinc_3d/src/render/: mod.rs  pipelines.rs  post_process.rs  shaders.rs
crates/blinc_3d/src/scene/: camera.rs  hierarchy.rs  mesh.rs  mod.rs  object3d.rs  sdf_mesh.rs
crates/blinc_3d/src/sdf/: codegen.rs  eval.rs  mod.rs  operations.rs  primitives.rs  renderer.rs
crates/blinc_3d/src/systems/: animation.rs  mod.rs  transform.rs  visibility.rs
crates/blinc_3d/src/utils/: mod.rs
crates/blinc_app/: Cargo.toml  README.md
crates/blinc_app/examples/: canvas_demo.rs  carousel_demo.rs  cn_demo.rs  code_demo.rs  effects_demo.rs  image_layer_test.rs  keyframe_canvas.rs  markdown_demo.rs  motion_demo.rs  notch_demo.rs  overlay_demo.rs  rich_text_demo.rs  scroll.rs  stateful_demo.rs  table_demo.rs  text_position_test.rs  text_widgets.rs  theme_demo.rs  typography_demo.rs  windowed.rs
crates/blinc_app/src/: android.rs  app.rs  context.rs  error.rs  fuchsia.rs  ios.rs  lib.rs  tests.rs  text_measurer.rs  windowed.rs
crates/blinc_cn/: Cargo.toml  README.md
crates/blinc_cn/src/: lib.rs
crates/blinc_cn/src/components/: accordion.rs  alert.rs  avatar.rs  badge.rs  breadcrumb.rs  button.rs  card.rs  checkbox.rs  collapsible.rs  combobox.rs  context_menu.rs  dialog.rs  dropdown_menu.rs  hover_card.rs  input.rs  kbd.rs  label.rs  menubar.rs  mod.rs  navigation_menu.rs  pagination.rs  radio.rs  scroll_area.rs  select.rs  separator.rs  sidebar.rs  skeleton.rs  slider.rs  spinner.rs  switch.rs  tabs.rs  textarea.rs  tree.rs  typography.rs
crates/blinc_core/: Cargo.toml  README.md
crates/blinc_core/src/: context_state.rs  draw.rs  layer.rs  lib.rs  native_bridge.rs  reactive.rs  runtime.rs  store.rs  value.rs
crates/blinc_debugger/: Cargo.toml  README.md
crates/blinc_gpu/: Cargo.toml  README.md
crates/blinc_gpu/src/: gradient_texture.rs  lib.rs  paint.rs  particles.rs  path.rs  primitives.rs  renderer.rs  shaders.rs  text.rs
crates/blinc_icons/: Cargo.toml  README.md
crates/blinc_icons/src/: icons.rs
crates/blinc_image/: Cargo.toml  README.md
crates/blinc_image/src/: loader.rs
crates/blinc_layout/: Cargo.toml  README.md
crates/blinc_layout/src/: animated.rs  canvas.rs  css_parser.rs  diff.rs  div.rs  element.rs  element_style.rs  event_handler.rs  event_router.rs  image.rs  interactive.rs  key.rs  layout_animation.rs  lib.rs  motion.rs  notch.rs  overlay_state.rs  recorder_bridge.rs  render_state.rs  renderer.rs  scroll.rs  stack.rs  stateful.rs  svg.rs  table.rs  text.rs  text_measure.rs  tree.rs  typography.rs  visual_animation.rs
crates/blinc_layout/src/markdown/: renderer.rs
crates/blinc_layout/src/rich_text/: mod.rs  parser.rs
crates/blinc_layout/src/selector/: handle.rs  mod.rs  registry.rs  scroll_ref.rs
crates/blinc_layout/src/widgets/: button.rs  checkbox.rs  code.rs  cursor.rs  (+7 more)
crates/blinc_macros/: Cargo.toml  README.md
crates/blinc_paint/: Cargo.toml  README.md
crates/blinc_paint/src/: color.rs  context.rs  gradient.rs  lib.rs  path.rs  primitives.rs
crates/blinc_platform/: Cargo.toml  README.md
crates/blinc_platform/src/: error.rs  event.rs  input.rs  lib.rs  platform.rs  window.rs
crates/blinc_recorder/: Cargo.toml  README.md
crates/blinc_recorder/src/: lib.rs
crates/blinc_runtime/: Cargo.toml  README.md
crates/blinc_runtime/src/: lib.rs
crates/blinc_svg/: Cargo.toml  README.md
crates/blinc_svg/src/: document.rs  error.rs  lib.rs  path.rs  rasterize.rs  style.rs
crates/blinc_test_suite/: Cargo.toml  README.md
crates/blinc_test_suite/src/: harness.rs  lib.rs  main.rs  runner.rs  window.rs
crates/blinc_text/: Cargo.toml  README.md
crates/blinc_text/src/: atlas.rs  emoji.rs  font.rs  lib.rs  rasterizer.rs  registry.rs  renderer.rs  shaper.rs
extensions/archived/blinc_fuchsia_async/: Cargo.toml
extensions/blinc_fidl/: Cargo.toml
extensions/blinc_fidl/src/: error.rs  lib.rs
extensions/blinc_fuchsia_zircon/: Cargo.toml  build.rs
extensions/blinc_fuchsia_zircon/src/: channel.rs  eventpair.rs  handle.rs  sys.rs
extensions/blinc_platform_android/: Cargo.toml  README.md
extensions/blinc_platform_android/src/: activity.rs  event_loop.rs  jni_bridge.rs  jni_utils.rs  lib.rs  native_bridge.rs  window.rs
extensions/blinc_platform_android/templates/: BlincNativeBridge.kt
extensions/blinc_platform_desktop/: Cargo.toml  README.md
extensions/blinc_platform_desktop/src/: event_loop.rs  input.rs  lib.rs  window.rs
extensions/blinc_platform_fuchsia/: Cargo.toml
extensions/blinc_platform_fuchsia/src/: app.rs  event_loop.rs  flatland.rs  gpu.rs  input.rs  lib.rs  scenic.rs  view_provider.rs
extensions/blinc_platform_ios/: Cargo.toml  README.md
extensions/blinc_platform_ios/src/: app.rs  assets.rs  event_loop.rs  input.rs  lib.rs  native_bridge.rs  window.rs
extensions/blinc_platform_ios/swift/: Blinc-Bridging-Header.h  BlincViewController.swift  README.md
extensions/blinc_platform_ios/templates/: BlincNativeBridge.swift
mobile/example/: .env.example  .gitignore  Cargo.toml  blinc.toml  build-ios.sh  build-ohos.sh
mobile/example/.cargo/: config.toml
mobile/example/src/: main.rs
(+188 files in other folders)
