[package]
name = "blinc_3d"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "3D game/application library for Blinc UI framework"
documentation = "https://docs.rs/blinc_3d"
keywords = ["3d", "game", "ecs", "graphics", "blinc"]
categories = ["game-engines", "graphics", "rendering"]

[dependencies]
# Core Blinc crates
blinc_core = { path = "../blinc_core", version = "0.1" }
blinc_animation = { path = "../blinc_animation", version = "0.1" }
blinc_layout = { path = "../blinc_layout", version = "0.1" }
blinc_gpu = { path = "../blinc_gpu", version = "0.1" }

# GPU rendering
wgpu.workspace = true
bytemuck = { workspace = true, features = ["derive"] }

# Data structures
slotmap.workspace = true
smallvec.workspace = true
rustc-hash.workspace = true

# Utilities
tracing.workspace = true

# Optional dependencies for mesh loading
gltf = { version = "1.4", optional = true }
tobj = { version = "4.0", optional = true }

[dev-dependencies]
criterion.workspace = true

[features]
default = []

# SDF support
sdf = []

# Utils - Phase 1 (Foundation)
utils-camera = []
utils-lighting = []
utils-skybox = []

# Utils - Phase 2 (Asset Loading)
utils-gltf = ["dep:gltf"]
utils-obj = ["dep:tobj"]
utils-loaders = ["utils-gltf", "utils-obj"]

# Bundles
utils-foundation = ["utils-camera", "utils-lighting", "utils-skybox"]
utils-phase1-2 = ["utils-foundation", "utils-loaders"]
