[package]
name = "blinc_app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Blinc application framework with clean layout and rendering API"

[dependencies]
blinc_core = { path = "../blinc_core" }
blinc_layout = { path = "../blinc_layout" }
blinc_gpu = { path = "../blinc_gpu" }
blinc_svg = { path = "../blinc_svg" }
blinc_text = { path = "../blinc_text" }
blinc_platform = { path = "../blinc_platform" }

# GPU
wgpu.workspace = true

# Windowing (optional - used by windowed feature)
winit = { workspace = true, optional = true }
raw-window-handle = { workspace = true }

# Async
pollster.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

[target.'cfg(not(target_os = "android"))'.dependencies]
blinc_platform_desktop = { path = "../../extensions/blinc_platform_desktop", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
blinc_platform_android = { path = "../../extensions/blinc_platform_android", optional = true }

[dev-dependencies]
image.workspace = true
tracing-subscriber.workspace = true

[features]
default = []
windowed = ["winit", "blinc_platform_desktop"]
android = ["blinc_platform_android"]
