[package]
name = "blinc_app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Blinc application framework with clean layout and rendering API"

[lib]
# rlib: Rust library for normal use
# staticlib: C static library for iOS/Android linking
crate-type = ["rlib", "staticlib"]

[dependencies]
blinc_core = { path = "../blinc_core" }
blinc_layout = { path = "../blinc_layout" }
blinc_gpu = { path = "../blinc_gpu" }
blinc_svg = { path = "../blinc_svg" }
blinc_text = { path = "../blinc_text" }
blinc_image = { path = "../blinc_image" }
blinc_platform = { path = "../blinc_platform" }
blinc_animation = { path = "../blinc_animation" }
blinc_macros = { path = "../blinc_macros" }
blinc_theme = { path = "../blinc_theme" }

# GPU
wgpu.workspace = true

# Windowing (optional - used by windowed feature)
winit = { workspace = true, optional = true }
raw-window-handle = { workspace = true }

# Async
pollster.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Data structures
lru = { workspace = true }

[target.'cfg(not(target_os = "android"))'.dependencies]
blinc_platform_desktop = { path = "../../extensions/blinc_platform_desktop", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
blinc_platform_android = { path = "../../extensions/blinc_platform_android", optional = true }
android-activity = { workspace = true, optional = true }
ndk = { workspace = true, optional = true }
jni = { workspace = true, optional = true }
android_logger = { version = "0.14", optional = true }
log = { version = "0.4", optional = true }
tracing-android = { version = "0.2", optional = true }
tracing-subscriber = { workspace = true, optional = true }

[target.'cfg(target_os = "ios")'.dependencies]
blinc_platform_ios = { path = "../../extensions/blinc_platform_ios", optional = true }

[dev-dependencies]
image.workspace = true
tracing-subscriber.workspace = true
blinc_cn = { path = "../blinc_cn" }

[features]
default = ["windowed"]
windowed = ["winit", "blinc_platform_desktop"]
android = ["blinc_platform_android", "android-activity", "ndk", "jni", "android_logger", "log", "tracing-android", "tracing-subscriber"]
ios = ["blinc_platform_ios"]
