[package]
name = "blinc_core"
description = "Blinc core runtime - reactive signals, state machines, and event dispatch"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["ui", "gui", "reactive", "signals", "blinc"]
categories = ["gui"]

[lib]
crate-type = ["lib"]

[features]
default = []

[dependencies]
# Data structures
slotmap.workspace = true
smallvec.workspace = true
rustc-hash.workspace = true

# Errors
thiserror.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
blinc_animation = { path = "../blinc_animation" }

# Benchmarks will be added later
# criterion.workspace = true

# [[bench]]
# name = "reactive"
# harness = false
