[package]
name = "blinc_icons"
description = "Lucide icon library for Blinc UI framework"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["ui", "gui", "icons", "lucide", "blinc"]
categories = ["gui"]
build = "build.rs"

[build-dependencies]
walkdir = "2"
roxmltree = "0.20"

[dependencies]
# No runtime dependencies - pure static data
# DCE handles binary size optimization automatically
