[package]
name = "blinc_image"
description = "Image loading and rendering for Blinc UI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["ui", "gui", "image", "blinc"]
categories = ["gui", "multimedia::images"]

[dependencies]
# Image decoding
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }

# Async/networking for URL loading
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
tokio = { version = "1", features = ["rt"], optional = true }

# Base64 decoding
base64 = "0.22"

# Error handling
thiserror = "2"

# Tracing
tracing = "0.1"

# Platform asset loading (optional)
blinc_platform = { path = "../blinc_platform", optional = true }

# Text rendering for emoji (optional)
blinc_text = { path = "../blinc_text", optional = true }

[features]
default = ["platform", "emoji"]
network = ["reqwest", "tokio"]
platform = ["blinc_platform"]
emoji = ["blinc_text"]
