[package]
name = "blinc_layout"
description = "Blinc layout engine - Flexbox layout powered by Taffy"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["lib"]

[features]
default = []
# Enable recorder integration for debugging/testing. Disable for production builds.
recorder = []

[dependencies]
blinc_core = { path = "../blinc_core" }
blinc_animation = { path = "../blinc_animation" }
blinc_theme = { path = "../blinc_theme" }

# Layout
taffy.workspace = true

# Data structures
slotmap.workspace = true
indexmap.workspace = true

# Logging
tracing.workspace = true

# Regex for syntax highlighting
regex.workspace = true

# Markdown parsing
pulldown-cmark = "0.10"

# HTML entity decoding
html-escape = "0.2"

# URL opening (for links)
open = "5"

# CSS parser combinators
nom = "7"
