[package]
name = "blinc_recorder"
description = "Recording and debugging infrastructure for Blinc applications"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
png = ["dep:png"]

[dependencies]
png = { version = "0.17", optional = true }
blinc_core = { path = "../blinc_core" }
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
tracing.workspace = true

[dev-dependencies]
