[package]
name = "blinc_runtime"
description = "Blinc runtime - core runtime for Blinc UI applications"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["full"]
full = ["blinc_core", "blinc_animation", "blinc_layout", "blinc_gpu", "blinc_paint"]

[dependencies]
blinc_core = { path = "../blinc_core", optional = true }
blinc_animation = { path = "../blinc_animation", optional = true }
blinc_layout = { path = "../blinc_layout", optional = true }
blinc_gpu = { path = "../blinc_gpu", optional = true }
blinc_paint = { path = "../blinc_paint", optional = true }
# blinc_cn = { path = "../blinc_cn", optional = true }

# Errors
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
