[package]
name = "blinc_svg"
description = "SVG loading and rendering for Blinc UI framework"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["ui", "gui", "svg", "blinc"]
categories = ["gui", "graphics"]

[dependencies]
blinc_core = { path = "../blinc_core" }
usvg = "0.44"
resvg = "0.44"
tiny-skia = "0.11"
thiserror = "2.0"
