[package]
name = "blinc_text"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "High-quality text rendering for Blinc UI framework"

[dependencies]
blinc_core = { path = "../blinc_core" }

# Font parsing
ttf-parser = { workspace = true }

# Text shaping (HarfBuzz)
rustybuzz = { workspace = true }

# Font discovery
fontdb = { workspace = true }

# Glyph rasterization (swash - high quality font rasterizer)
swash = "0.1"

# Unicode handling
unicode-bidi = { workspace = true }
unicode-linebreak = { workspace = true }

# HTML entity decoding
html-escape = "0.2"

# Utilities
thiserror = { workspace = true }
tracing = { workspace = true }
rustc-hash = { workspace = true }
lru = { workspace = true }

[dev-dependencies]
