[package]
name = "example"
version = "0.1.0"
edition = "2021"

# Standalone project (not part of parent workspace)
[workspace]

[lib]
name = "example"
path = "src/main.rs"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "example_desktop"
path = "src/main.rs"
required-features = ["desktop"]

[dependencies]
blinc_core = { path = "../../crates/blinc_core" }
blinc_layout = { path = "../../crates/blinc_layout" }
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(not(target_os = "android"))'.dependencies]
blinc_app = { path = "../../crates/blinc_app" }

[target.'cfg(target_os = "android")'.dependencies]
blinc_app = { path = "../../crates/blinc_app", features = ["android"] }
blinc_platform_android = { path = "../../extensions/blinc_platform_android" }
android-activity = { version = "0.6", features = ["native-activity"] }
log = "0.4"
android_logger = "0.14"

[target.'cfg(target_os = "ios")'.dependencies]
blinc_app = { path = "../../crates/blinc_app", features = ["ios"] }
blinc_platform_ios = { path = "../../extensions/blinc_platform_ios" }

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
blinc_platform_desktop = { path = "../../extensions/blinc_platform_desktop" }

[features]
default = ["desktop"]
desktop = []
android = []
ios = []

[profile.release]
lto = "thin"
opt-level = "z"
strip = true

[profile.dev]
opt-level = 1

[package.metadata.android]
package = "com.blinc.example"
apk_label = "example"
target_sdk_version = 34
min_sdk_version = 24

[package.metadata.android.application]
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"
