[package]
name = "example"
version = "0.1.0"
edition = "2021"

# Standalone project (not part of parent workspace)
[workspace]

[lib]
name = "example"
path = "src/main.rs"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "example_desktop"
path = "src/main.rs"
required-features = ["desktop"]

[dependencies]
blinc_core = { path = "../../crates/blinc_core" }
blinc_layout = { path = "../../crates/blinc_layout" }
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(target_os = "android")'.dependencies]
blinc_app = { path = "../../crates/blinc_app", default-features = false, features = ["android"] }
blinc_platform_android = { path = "../../extensions/blinc_platform_android" }
android-activity = { version = "0.6", features = ["native-activity"] }
log = "0.4"
android_logger = "0.14"

[target.'cfg(target_os = "ios")'.dependencies]
blinc_app = { path = "../../crates/blinc_app", default-features = false, features = ["ios"] }
blinc_platform_ios = { path = "../../extensions/blinc_platform_ios" }

# HarmonyOS/OpenHarmony (target_env = "ohos", target_os = "linux")
[target.'cfg(target_env = "ohos")'.dependencies]
blinc_app = { path = "../../crates/blinc_app", default-features = false, features = ["harmony"] }
blinc_platform_harmony = { path = "../../extensions/blinc_platform_harmony" }

[target.'cfg(all(any(target_os = "windows", target_os = "macos", target_os = "linux"), not(target_env = "ohos")))'.dependencies]
blinc_app = { path = "../../crates/blinc_app" }
blinc_platform_desktop = { path = "../../extensions/blinc_platform_desktop" }

[features]
default = ["desktop"]
desktop = []
android = []
ios = []
harmony = []

[profile.release]
lto = "fat"
opt-level = "z"
strip = "symbols"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1

[package.metadata.android]
package = "com.blinc.example"
apk_label = "example"
target_sdk_version = 34
min_sdk_version = 24

[package.metadata.android.application]
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"
